# NVIDIA-NeMo___nemo-platform

./: .copyrightignore  .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Makefile  NOTICE  README.md  RELEASING.md  SETUP.md  TESTING.md  conftest.py  docker-bake.hcl  mkdocs.yml  pyproject.toml  pytest.ini  ruff.toml
plugins/example-plugin/: pyproject.toml
plugins/example-plugin/src/nemo_example_plugin/: _perms.py  authz.py  middleware.py  middleware_service.py  service.py
plugins/example-plugin/tests/: test_authz.py  test_sdk.py
plugins/nemo-agents/: README.md  pyproject.toml
plugins/nemo-agents/examples/: hello_world.yaml
plugins/nemo-agents/examples/calculator-agent/: pyproject.toml
plugins/nemo-agents/examples/email-phishing-analyzer/: pyproject.toml
plugins/nemo-agents/examples/nemo-agent-config/: agent.yaml
plugins/nemo-agents/openapi/: openapi.yaml
plugins/nemo-agents/src/nemo_agents_plugin/: agent_config.py  authz.py  cli.py  cli_context.py  config.py  entities.py  schema.py  sdk.py  service.py  utils.py
plugins/nemo-agents/tests/: test_authz.py
plugins/nemo-anonymizer/: pyproject.toml
plugins/nemo-auditor/: README.md  pyproject.toml
plugins/nemo-auditor/openapi/: openapi.yaml
plugins/nemo-auditor/tests/: test_api_configs.py  test_api_targets.py  test_audit_job.py  test_authz.py  test_service.py
plugins/nemo-automodel/: README.md  pyproject.toml
plugins/nemo-automodel/tests/: test_api.py  test_cli.py  test_contract_job_inputs.py  test_contributor.py  test_schema.py
plugins/nemo-customizer/: README.md  pyproject.toml
plugins/nemo-customizer/docs/: CUSTOMIZATION.md
plugins/nemo-customizer/openapi/: openapi.yaml
plugins/nemo-customizer/tests/: test_cli.py  test_customization_discovery_reexport.py  test_router.py  test_sdk.py  test_skills.py
plugins/nemo-deployments/: README.md  pyproject.toml
plugins/nemo-deployments/openapi/: openapi.yaml
plugins/nemo-evaluator/: README.md  pyproject.toml
plugins/nemo-evaluator/examples/: plugin_examples.py
plugins/nemo-evaluator/openapi/: openapi.yaml
plugins/nemo-evaluator/tests/: test_agent_evaluate.py  test_agent_seeds.py  test_authz.py  test_evaluate_job.py  test_filesets.py  test_metric_refs.py  test_metric_storage.py  test_result_entity.py  test_result_persistence.py  test_sdk.py  test_sdk_job_resources.py  test_service.py  test_standalone_sdk_backend.py  test_task_entity.py  test_taskset_entity.py
plugins/nemo-guardrails/: pyproject.toml
plugins/nemo-guardrails/benchmarks/: README.md
plugins/nemo-insights/: README.md  pyproject.toml
plugins/nemo-insights/examples/: insight-example.yaml
plugins/nemo-insights/testbed/: README.md  __main__.py  adapters.py  artifact.py  cli.py  export.py  ingest.py  otlp_build.py  otlp_ingest.py  publish.py  registry.py  reingest.py  release.py  runstore.py  summary.py  tau2run.py  testbeds.toml  timeparse.py
plugins/nemo-insights/tests/: test_cli_profile.py  test_client.py  test_periodic_analysis.py  test_preflight.py  test_profile.py  test_sdk_entity_hydration.py
plugins/nemo-rl/: README.md  pyproject.toml
plugins/nemo-rl/tests/: test_contract_job_inputs.py
plugins/nemo-switchyard/: README.md  pyproject.toml
plugins/nemo-unsloth/: README.md  pyproject.toml
plugins/nemo-unsloth/tests/: test_cli.py  test_contract_job_inputs.py  test_contributor.py  test_jobs.py  test_schema.py
services/automodel/: README.md  pyproject.toml
services/automodel/docker/: Dockerfile.mamba-wheel  Dockerfile.nmp-automodel-base  Dockerfile.nmp-automodel-tasks  Dockerfile.nmp-automodel-training  Dockerfile.platform-workspace  README.md  no_override_requirements.txt  pyproject.workspace.toml
services/automodel/docs/: automodel_errors.md
services/automodel/tests/: test_adapter.py  test_compiler.py  test_contract_configs.py  test_images.py  test_integrations_compiler.py  test_job_context.py  test_platform_client.py  test_progress_reporter.py  test_validators.py
services/core/auth/: pyproject.toml
services/core/entities/: pyproject.toml
services/core/files/: pyproject.toml
services/core/inference-gateway/: pyproject.toml
services/core/jobs/: README.md  pyproject.toml
services/evaluator/: pyproject.toml
services/guardrails/: pyproject.toml
services/guardrails/callouts/: go.mod  go.sum
services/hello-world/: pyproject.toml
services/intake/: README.md  pyproject.toml
services/intake/tests/: conftest.py  test_atif_v17.py  test_clickhouse_startup.py  test_evaluation_session_clickhouse_repository.py  test_experiment_default_sort.py  test_experiment_metric_filter.py  test_experiment_optimization_fields.py  test_experiment_rollup_repository.py  test_experiment_session_schemas.py  test_experiment_sort.py  test_experiment_sort_endpoint.py  test_sessions_api.py  test_sessions_clickhouse_repository.py  test_spans_clickhouse_migrations.py  test_spans_clickhouse_repository.py  test_spans_otlp.py  test_spans_schemas.py  test_spans_storage.py  test_traces_api.py  test_traces_clickhouse_repository.py
services/platform-seed/: README.md  pyproject.toml
services/platform-seed/tests/: test_platform_seed_runner.py
services/rl/: README.md  pyproject.toml
services/rl/tests/: test_compiler.py  test_dpo_config.py  test_preparation.py  test_schemas.py
services/studio/: pyproject.toml
services/unsloth/: README.md  pyproject.toml
services/unsloth/docker/: Dockerfile.nmp-unsloth-training  Dockerfile.platform-workspace  README.md  docker-bake.hcl  pyproject.workspace.toml
services/unsloth/tests/: test_callbacks.py  test_compile.py  test_compiler_validation_path.py  test_dataset_loading.py  test_eval_steps.py  test_file_io.py  test_hf_trainer_callback.py  test_images.py  test_integrations_compiler.py  test_integrations_hf_bridge.py  test_main.py  test_model_entity.py  test_model_load_kwargs.py  test_progress.py  test_schemas.py
tools/mcp-dev-tools/: nmp_dev_mcp.py  pyproject.toml
tools/nemo-platform-sdk-tools/: pyproject.toml
tools/nemo-platform-sdk-tools/tests/: test_cli.py
(+1763 files in other folders)
