[project]
name = "nemo-example-plugin"
version = "0.1.0"
description = "Example reference plugin that validates the NeMo Platform plugin system end-to-end."
requires-python = ">=3.11,<3.15"
dependencies = ["nemo-platform-plugin", "nemo-platform", "pydantic>=2.0.0"]

[tool.uv.sources]
nemo-platform = { path = "../../packages/nemo_platform", editable = true }
nemo-platform-plugin = { path = "../../packages/nemo_platform_plugin", editable = true }

[project.entry-points."nemo.services"]
example = "nemo_example_plugin.service:ExampleService"

[project.entry-points."nemo.cli"]
example = "nemo_example_plugin.cli:ExampleCLI"

[project.entry-points."nemo.sdk"]
example = "nemo_example_plugin.sdk:example_sdk_resources"

[project.entry-points."nemo.seed"]
example = "nemo_example_plugin.seed_job:ExampleSeedJob"

[project.entry-points."nemo.jobs"]
"example.say-hello" = "nemo_example_plugin.jobs.say_hello:SayHelloJob"

[project.entry-points."nemo.functions"]
"example.greet" = "nemo_example_plugin.functions.greet:GreetFunction"
"example.count" = "nemo_example_plugin.functions.greet:CountFunction"

[project.entry-points."nemo.skills"]
example = "nemo_example_plugin.skills:get_skills_path"

[project.entry-points."nemo.controllers"]
"example-controller" = "nemo_example_plugin.controller:ExampleController"

[project.entry-points."nemo.inference_middleware"]
"nemo-example-middleware" = "nemo_example_plugin.middleware:ExampleInferenceMiddleware"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nemo_example_plugin"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src"]
