[project]
name = "nemo-agents-plugin"
version = "0.1.0"
description = "NeMo Agents Plugin — agent lifecycle management on the NeMo Platform."
requires-python = ">=3.11,<3.14"
dependencies = [
    "nemo-platform",
    "nemo-platform-plugin",
    "nmp-common",
    "nemo-agents-example-calculator",
    "nvidia-nat-core>=1.7.0,<1.8",
    "nvidia-nat-langchain>=1.7.0,<1.8",
    "nvidia-nat-config-optimizer>=1.7.0,<1.8",
    # ASTD-164: tight pins avoid pip ResolutionTooDeep via aioboto3/langchain-aws.
    "langchain-aws==1.1.0",
    "boto3>=1.40.46,<1.40.62",
    "botocore>=1.40.46,<1.40.62",
    "httpx>=0.27",
    "pyyaml>=6.0",
    # improvement/ subpackage — agent-improvement workflow (POC).
    "anthropic>=0.88.0",
    "rich>=13.7.1",
]

[project.entry-points."nemo.services"]
agents = "nemo_agents_plugin.service:AgentsService"

[project.entry-points."nemo.cli"]
agents = "nemo_agents_plugin.cli:AgentsCLI"

[project.entry-points."nemo.sdk"]
agents = "nemo_agents_plugin.sdk:agents_sdk_resources"

[project.entry-points."nemo.skills"]
agents = "nemo_agents_plugin.skills:skills_dir"

[project.entry-points."nemo.jobs"]
"agents.evaluate" = "nemo_agents_plugin.jobs.evaluate_agent:EvaluateAgentJob"
"agents.optimize" = "nemo_agents_plugin.jobs.optimize_agent:OptimizeAgentJob"
# POC: agent-improvement workflow
"agents.evaluate-suite" = "nemo_agents_plugin.jobs.evaluate_suite:EvaluateSuiteJob"
"agents.analyze" = "nemo_agents_plugin.jobs.analyze_batch:AnalyzeBatchJob"
"agents.optimize-skills" = "nemo_agents_plugin.jobs.optimize_skills:OptimizeSkillsJob"

[project.entry-points."nemo.controllers"]
"agents-deployment" = "nemo_agents_plugin.runner.controller:AgentDeploymentController"

# NeMo Agent Toolkit — register custom telemetry exporter (see nat.runtime.loader nat.plugins)
[project.entry-points."nat.plugins"]
nemo_agents_files_telemetry = "nemo_agents_plugin.telemetry.files_service_exporter"

[project.optional-dependencies]
container = [
    "jinja2>=3.1",
    "python-on-whales>=0.60",
]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "fastapi>=0.115",
    "jinja2>=3.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nemo_agents_plugin"]

[tool.uv.sources]
nemo-platform = { workspace = true }
nemo-platform-plugin = { workspace = true }
nmp-common = { workspace = true }
nemo-agents-example-calculator = { workspace = true }

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
# "src" puts nemo_agents_plugin on sys.path.  nemo-platform is resolved
# from the workspace — run `uv sync` at the repo root before running these tests.
pythonpath = ["src"]

# Opt this plugin into OpenAPI spec generation.
[tool.nemo.openapi]
