[project]
name = "nemo-agents-plugin"
description = "NeMo Agents Plugin — agent lifecycle management on the NeMo Platform."
requires-python = ">=3.11,<3.15"
dependencies = [
    "nemo-platform",
    "nemo-platform-plugin",
    "nemo-deployments-plugin",
    "nemo-agents-example-calculator",
    "nemo-agents-example-email-phishing",
    "nvidia-nat-core>=1.8.0,<1.9",
    "nvidia-nat-langchain>=1.8.0,<1.9",
    "nvidia-nat-config-optimizer>=1.8.0,<1.9",
    # ASTD-164: tight pins avoid pip ResolutionTooDeep via aioboto3/langchain-aws.
    "langchain-aws==1.1.0",
    "boto3>=1.40.46,<1.40.62",
    "botocore>=1.40.46,<1.40.62",
    "httpx>=0.27",
    "pyyaml>=6.0",
    # TODO(AIRCORE-896): Add Fabric SDK/runtime and Relay as default
    # dependencies once the PyPI wheels are available to the repo resolver.
    # Harness adapter packages should stay target-environment dependencies.
    # improvement/ subpackage — agent-improvement workflow (POC).
    "anthropic>=0.88.0",
    "rich>=13.7.1",
]
version = "0.0.0"

[project.entry-points."nemo.services"]
agents = "nemo_agents_plugin.service:AgentsService"

[project.entry-points."nemo.cli"]
agents = "nemo_agents_plugin.cli:AgentsCLI"

[project.entry-points."nemo.sdk"]
agents = "nemo_agents_plugin.sdk:agents_sdk_resources"

[project.entry-points."nemo.skills"]
agents = "nemo_agents_plugin.skills:skills_dir"

[project.entry-points."nemo.jobs"]
"agents.evaluate" = "nemo_agents_plugin.jobs.evaluate_agent:EvaluateAgentJob"
"agents.optimize" = "nemo_agents_plugin.jobs.optimize_agent:OptimizeAgentJob"
# POC: agent-improvement workflow
"agents.evaluate-suite" = "nemo_agents_plugin.jobs.evaluate_suite:EvaluateSuiteJob"
"agents.analyze" = "nemo_agents_plugin.jobs.analyze_batch:AnalyzeBatchJob"
"agents.optimize-skills" = "nemo_agents_plugin.jobs.optimize_skills:OptimizeSkillsJob"

[project.entry-points."nemo.controllers"]
"agents-deployment" = "nemo_agents_plugin.runner.controller:AgentDeploymentController"

# NeMo Agent Toolkit — register custom telemetry exporter (see nat.runtime.loader nat.plugins)
[project.entry-points."nat.plugins"]
nemo_agents_files_telemetry = "nemo_agents_plugin.telemetry.files_service_exporter"

# NeMo Agent Toolkit — register vendored workflow adapters (see nat.components)
[project.entry-points."nat.components"]
nat_claude_code_agent_adapter = "nat_claude_code_agent_adapter.register"
nat_codex_agent_adapter = "nat_codex_agent_adapter.register"
nat_cursor_agent_adapter = "nat_cursor_agent_adapter.register"
nat_hermes_agent_adapter = "nat_hermes_agent_adapter.register"
nat_openclaw_agent_adapter = "nat_openclaw_agent_adapter.register"

[project.optional-dependencies]
container = [
    "jinja2>=3.1",
    "python-on-whales>=0.60",
]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "fastapi>=0.115",
    "jinja2>=3.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "src/nemo_agents_plugin",
    "vendor/claude_code_agent_adapter/src/nat_claude_code_agent_adapter",
    "vendor/codex_agent_adapter/src/nat_codex_agent_adapter",
    "vendor/cursor_agent_adapter/src/nat_cursor_agent_adapter",
    "vendor/hermes_agent_adapter/src/nat_hermes_agent_adapter",
    "vendor/openclaw_agent_adapter/src/nat_openclaw_agent_adapter",
]


[tool.uv.sources]
nemo-platform = { workspace = true }
nemo-platform-plugin = { workspace = true }
nemo-deployments-plugin = { workspace = true }
nemo-agents-example-calculator = { workspace = true }
nemo-agents-example-email-phishing = { workspace = true }

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
# "src" puts nemo_agents_plugin on sys.path.  nemo-platform is resolved
# from the workspace — run `uv sync` at the repo root before running these tests.
pythonpath = ["src"]

# Opt this plugin into OpenAPI spec generation.
[tool.nemo.openapi]
