[project]
name = "nemo-auditor-plugin"
version = "0.1.0"
description = "Auditor plugin scaffold for NeMo Platform."
requires-python = ">=3.11,<3.14"
dependencies = [
    "garak-api",
    "httpx>=0.27",
    "nemo-platform-plugin",
    "nemo-platform",
    "pydantic>=2.10.6",
    "pyyaml>=6.0.2",
    "typer>=0.20.0",
]

[project.entry-points."nemo.services"]
auditor = "nemo_auditor.service:AuditorPluginService"

[project.entry-points."nemo.cli"]
auditor = "nemo_auditor.cli:AuditorPluginCLI"

[project.entry-points."nemo.sdk"]
auditor = "nemo_auditor.sdk:auditor_sdk_resources"

[project.entry-points."nemo.jobs"]
"auditor.audit" = "nemo_auditor.jobs.audit:AuditJob"

[project.entry-points."nemo.seed"]
auditor = "nemo_auditor.seed_job:AuditorSeedJob"

[project.entry-points."nemo.skills"]
auditor = "nemo_auditor.skills:get_skills_path"

[project.entry-points."nemo.docs"]
auditor = "nemo_auditor.docs:get_docs_path"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nemo_auditor"]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.3",
    "ruff>=0.11.8",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.pyright]
extraPaths = ["src"]

# Opt this plugin into OpenAPI spec generation
[tool.nemo.openapi]
