[project]
name = "nemo-automodel-plugin"
description = "NeMo Automodel customization contributor for NeMo Platform."
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "nemo-platform-plugin",
    "nemo-platform",
    "nmp-automodel",
    "nmp-customization-common",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.6.1",
    "typer>=0.12.5",
]
version = "0.0.0"

[project.entry-points."nemo.customization.contributors"]
automodel = "nemo_automodel_plugin.contributor:AutomodelContributor"

[project.entry-points."nemo.jobs"]
"customization.automodel.jobs" = "nemo_automodel_plugin.jobs.jobs:AutomodelJob"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nemo_automodel_plugin"]


[tool.uv.sources]
nemo-platform-plugin = { workspace = true }
nemo-platform = { workspace = true }
nmp-automodel = { workspace = true }
nemo-customizer-plugin = { workspace = true }
nmp-customization-common = { workspace = true }


[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.3",
    "ruff>=0.11.8",
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "nemo-customizer-plugin",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.pyright]
extraPaths = ["src"]
