[project]
name = "nemo-customizer-plugin"
version = "0.1.0"
description = "Customization router for NeMo Platform training backends."
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "nemo-platform-plugin",
    "nemo-platform",
    "datasets>=3.3.1",
    "pydantic>=2.10.6",
    "transformers>=4.48.0",
    "typer>=0.12.5",
]

[project.entry-points."nemo.services"]
customization = "nemo_customizer.router:CustomizationRouterService"

[project.entry-points."nemo.cli"]
customization = "nemo_customizer.cli:CustomizationCLI"

[project.entry-points."nemo.sdk"]
customization = "nemo_customizer.sdk.resources:customization_sdk_resources"

[project.entry-points."nemo.skills"]
customizer = "nemo_customizer.skills:get_skills_path"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nemo_customizer"]

[tool.uv.sources]
nemo-platform-plugin = { workspace = true }
nemo-platform = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.3",
    "ruff>=0.11.8",
    "fastapi>=0.115.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.pyright]
extraPaths = ["src"]
