[project]
name = "nemo-deployments-plugin"
description = "NeMo Deployments Plugin — substrate-agnostic deployment lifecycle on the NeMo Platform."
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "fastapi>=0.115",
    "httpx>=0.27",
    "nemo-platform-sdk",
    "nemo-platform-plugin",
    "pydantic>=2.10.6",
]
version = "0.0.0"

[project.optional-dependencies]
docker = ["docker>=7.0"]
k8s = ["kubernetes>=30.1.0"]

[project.entry-points."nemo.services"]
deployments = "nemo_deployments_plugin.service:DeploymentsService"

[project.entry-points."nemo.controllers"]
deployments = "nemo_deployments_plugin.controller:DeploymentsController"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nemo_deployments_plugin"]


[tool.uv.sources]
nemo-platform-sdk = { workspace = true }
nemo-platform-plugin = { workspace = true }


[dependency-groups]
dev = ["pytest>=8.3.4", "pytest-asyncio>=0.25.3", "httpx>=0.27", "fastapi>=0.115", "docker>=7.0", "kubernetes>=30.1.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src", "tests/unit", "tests/integration"]

[tool.nemo.openapi]
