[project]
name = "nemo-evaluator-plugin"
version = "0.1.0"
description = "Evaluator plugin scaffold for NeMo Platform."
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "nemo-evaluator-sdk",
    "nemo-platform-plugin",
    "nemo-platform",
    "nmp-evaluator",
    "pydantic>=2.10.6",
    "typer>=0.20.0",
]

[project.entry-points."nemo.services"]
evaluator = "nemo_evaluator.service:EvaluatorPluginService"

[project.entry-points."nemo.cli"]
evaluator = "nemo_evaluator.cli:EvaluatorPluginCLI"

[project.entry-points."nemo.sdk"]
evaluator = "nemo_evaluator.sdk.resources:evaluator_sdk_resources"

[project.entry-points."nemo.jobs"]
"evaluator.evaluate" = "nemo_evaluator.jobs.evaluate:EvaluateJob"

[project.entry-points."nemo.skills"]
evaluator = "nemo_evaluator.skills:get_skills_path"

[project.entry-points."nemo.docs"]
evaluator = "nemo_evaluator.docs:get_docs_path"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nemo_evaluator"]

[tool.uv.sources]
nemo-evaluator-sdk = { workspace = true }
nemo-platform-plugin = { workspace = true }
nemo-platform = { workspace = true }
nmp-evaluator = { workspace = true }

[dependency-groups]
dev = ["pytest>=8.3.4", "pytest-asyncio>=0.25.3", "ruff>=0.11.8"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.pyright]
extraPaths = ["src"]
