[project]
name = "nemo-guardrails-plugin"
version = "0.1.0"
description = "NeMo Guardrails Plugin"
requires-python = ">=3.11,<3.14"
dependencies = [
    "nemo-platform-plugin",
    "nemo-platform",
    "nemoguardrails[tracing]==0.21.0",
    # Workaround: nemoguardrails 0.21.0 imports `dataclasses_json` but doesn't declare it
    # as a dependency.
    "dataclasses-json>=0.6.7",
]

[project.entry-points."nemo.inference_middleware"]
nemo-guardrails = "nemo_guardrails_plugin.middleware:GuardrailsMiddleware"

[project.entry-points."nemo.skills"]
guardrails = "nemo_guardrails_plugin.skills:get_skills_path"

[tool.uv.sources]
nemo-platform-plugin = { workspace = true }
nemo-platform = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nemo_guardrails_plugin"]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.3",
    "pytest-mock>=3.14.1",
    "ruff>=0.11.8",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
addopts = "--import-mode=importlib"
filterwarnings = [
    # Ignore deprecation warnings for libraries still on Pydantic 1.x
    "ignore::pydantic.PydanticDeprecatedSince20:nemoguardrails\\.",
    "ignore::pydantic.PydanticDeprecatedSince20:langchain_community\\."
]
testpaths = ["tests"]
